<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="500dp"
    android:foregroundTint="#000000"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:contentDescription="@string/register_preview_content_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/default_picture" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_zethyname"
        style="@style/TitleTextStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/detail_popup_item_title"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <ImageView
        android:contentDescription="@string/popup_close_button"
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/popup_zethyname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popup_zethyname"
        app:layout_constraintTop_toTopOf="@+id/popup_zethyname"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/detail_popup_cat_description"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/detail_popup_cat_description"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/popup_zethy_description"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_popup_cat_description_default"
        app:layout_constraintStart_toStartOf="@+id/detail_popup_cat_description"
        app:layout_constraintTop_toBottomOf="@+id/detail_popup_cat_description" />

    <TextView
        android:id="@+id/detail_popup_cat_apartment"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/detail_popup_cat_apartment"
        app:layout_constraintStart_toStartOf="@+id/popup_zethy_description"
        app:layout_constraintTop_toBottomOf="@+id/popup_zethy_description" />

    <TextView
        android:id="@+id/popup_zethy_apartment"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_popup_cat_apartment_default"
        app:layout_constraintStart_toStartOf="@+id/detail_popup_cat_apartment"
        app:layout_constraintTop_toBottomOf="@+id/detail_popup_cat_apartment" />

    <TextView
        android:id="@+id/detail_popup_cat_favorite_drink"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/detail_popup_cat_favorite_drink"
        app:layout_constraintStart_toStartOf="@+id/popup_zethy_apartment"
        app:layout_constraintTop_toBottomOf="@+id/popup_zethy_apartment" />

    <TextView
        android:id="@+id/popup_zethy_favorite_drink"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_popup_cat_favorite_drink_default"
        app:layout_constraintStart_toStartOf="@+id/detail_popup_cat_favorite_drink"
        app:layout_constraintTop_toBottomOf="@+id/detail_popup_cat_favorite_drink" />

    <ImageView
        android:contentDescription="@string/popup_delete_button"
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_trash" />


</androidx.constraintlayout.widget.ConstraintLayout>